--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <title>To Do Decentralized Application</title>
     <script src="main.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.7.1.umd.min.js"
-        type="application/javascript"></script>
+    type="application/javascript"></script>
 	<title>Voting DAPP</title>
 	<link rel="stylesheet" href="./CSS/index.css">
 
 </head>
 <body>
     <div class = "navbar">
-        <a href="/index.html">Vote</a>
-        <a href="/ListVoters.html">List Voters</a>
+        <a href="/index.html">Bầu Cử</a>
+        <a href="/ListVoters.html">Danh Sách Bầu Cử</a>
     </div>
 
-    <div class="container">Welcome to the Decentralized Voting Application</div>
+    <div class="container"><h1>Chào Mừng Đến Với Group 10</h1></div>
 
-    <div>
-        <button onclick="connectMetamask()">Connect Metamask</button>
+    <div class="Btn">
+        <button onclick="connectMetamask()">Kết nối Ví MetaMask</button>
         <p id="metamasknotification"></p>
     </div>
 
     <div class="container">
-        <span>Bầu cử bên dưới</span>
+        <h3>Bầu cử bên dưới</h3>
         <input type = "number" id ="vote" placeholder="Điền thứ tự của người muốn bầu cử">
         <button onclick="addVote()">Bầu cử</button>
         <p id="cand"></p>
@@ -33,7 +33,7 @@
         <p id = "time"></p>
     </div>
 
-    <div>
+    <div class="Btn">
         <button onclick="getAllCandidates()">Danh Sách Ứng Cử Viên</button>
         <p id="p3"></p>
     </div>
